@@ -2,6 +2,12 @@
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Id$
 
+  19 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py:
+  Fixed CATEGORY value after preinst phase. This should close #6414. Fixed
+  nested dependency problem and cleaned up dep_zapdeps function.
+  This bug happened with DEPEND='|| ( cat_a/pkg_a flag? ( cat_b/pkg_b ) )'.
+  This should close #41869.
+
   13 Feb 2004; Masatomo Nakano <nakano@gentoo.org> portage.py: Fixed parsing
   SRC_URI bug when FEATURES="cvs". This should close #16159.
 
